# TaskModelForROS

src/task_model/: CMakeLists.txt  package.xml
src/task_model/launch/: test.launch
src/task_model/src/: taskModel.cpp
